[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/game_over_menu.gd" id="1"]

[node name="GameOverMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -350.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 36
text = "GAME OVER"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "SCORE"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Survival Time: 00:00"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Kills: 0"
horizontal_alignment = 1

[node name="Separator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "STATISTICS"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Level: 1"
horizontal_alignment = 1

[node name="ExpLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Total EXP: 0"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Gold Collected: 0"
horizontal_alignment = 1

[node name="Separator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerStatsTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Final Stats"
horizontal_alignment = 1

[node name="StatsGrid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 5
columns = 2

[node name="DamageLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Damage:"

[node name="DamageValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "10"
horizontal_alignment = 2

[node name="AttackSpeedLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Attack Speed:"

[node name="AttackSpeedValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "1.0"
horizontal_alignment = 2

[node name="MoveSpeedLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Move Speed:"

[node name="MoveSpeedValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "250"
horizontal_alignment = 2

[node name="DefenseLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Defense:"

[node name="DefenseValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "20%"
horizontal_alignment = 2

[node name="LifestealLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Lifesteal:"

[node name="LifestealValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "10%"
horizontal_alignment = 2

[node name="Separator4" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RestartButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "RESTART"

[node name="ExitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "EXIT"